[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://menus/NetworkMultiplayerSetup.gd" id="1"]

[node name="NetworkMultiplayerSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 0)

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Network Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="NetworkButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/NetworkButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Host Game"

[node name="HostWithClientButton" type="Button" parent="CenterContainer/VBoxContainer/NetworkButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Host + Auto Client (Testing)"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/NetworkButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Join Game"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="JoinContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinTitle" type="Label" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2
text = "Join Game Settings:"
horizontal_alignment = 1

[node name="AddressContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2

[node name="AddressLabel" type="Label" parent="CenterContainer/VBoxContainer/JoinContainer/AddressContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
text = "Address:"

[node name="AddressInput" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer/AddressContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Enter host IP address"

[node name="PortContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/JoinContainer/PortContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
text = "Port:"

[node name="PortInput" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer/PortContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "8910"
placeholder_text = "Enter port number"

[node name="PlayerNameContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="CenterContainer/VBoxContainer/JoinContainer/PlayerNameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
text = "Your Name:"

[node name="PlayerNameInput" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer/PlayerNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
placeholder_text = "Enter your player name"

[node name="ConnectButton" type="Button" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Connect"

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Choose to host or join a network game"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Back"